source/commons/bell/stringparser/stringparser.output
Terminals unused in grammar

   EOL
   UNRECOGNIZED


State 16 conflicts: 1 shift/reduce, 3 reduce/reduce
State 50 conflicts: 24 shift/reduce
State 54 conflicts: 2 shift/reduce
State 55 conflicts: 23 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 225 conflicts: 99 reduce/reduce
State 313 conflicts: 28 reduce/reduce
State 315 conflicts: 28 reduce/reduce
State 316 conflicts: 28 reduce/reduce
State 360 conflicts: 28 reduce/reduce
State 384 conflicts: 28 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | NAMEDPARAM
    3        | sequence
    4        | sequence NAMEDPARAM

    5 sequence: list
    6         | sequence SEQ list

    7 ifThenElse: IF_KW sequence THEN_KW list
    8           | IF_KW sequence THEN_KW list ELSE_KW list

    9 whileloop: WHILE_KW sequence DO_KW list
   10          | WHILE_KW sequence COLLECT_KW list

   11 forloop: FOR_KW forargList DO_KW list
   12        | FOR_KW forargList WITH_KW argsByNameList DO_KW list
   13        | FOR_KW forargList AS_KW sequence DO_KW list
   14        | FOR_KW forargList AS_KW sequence WITH_KW argsByNameList DO_KW list
   15        | FOR_KW forargList WITH_KW argsByNameList AS_KW sequence DO_KW list
   16        | FOR_KW forargList COLLECT_KW list
   17        | FOR_KW forargList WITH_KW argsByNameList COLLECT_KW list
   18        | FOR_KW forargList AS_KW sequence COLLECT_KW list
   19        | FOR_KW forargList AS_KW sequence WITH_KW argsByNameList COLLECT_KW list
   20        | FOR_KW forargList WITH_KW argsByNameList AS_KW sequence COLLECT_KW list

   21 forargList: forarg
   22           | forargList COMMA forarg

   23 forarg: LOCALVAR IN_KW sequence
   24       | LOCALVAR LOCALVAR IN_KW sequence

   25 $@1: %empty

   26 fundef: funargList FUNDEF $@1 list

   27 $@2: %empty

   28 fundef: FUNDEF $@2 list

   29 $@3: %empty

   30 fundef: funargList liftedargList FUNDEF $@3 list

   31 $@4: %empty

   32 fundef: liftedargList FUNDEF $@4 list

   33 funargList: LOCALVAR
   34           | ELLIPSIS

   35 $@5: %empty

   36 funargList: LOCALVAR ASSIGN $@5 list
   37           | funargList COMMA LOCALVAR
   38           | funargList COMMA ELLIPSIS

   39 $@6: %empty

   40 funargList: funargList COMMA LOCALVAR ASSIGN $@6 list

   41 liftedargList: LIFT LOCALVAR
   42              | liftedargList COMMA LOCALVAR

   43 functionApplication: funcall
   44                    | exp APPLY funcall

   45 funcall: term STARTPARAMS argsByPositionList CLOSEDROUND
   46        | term STARTPARAMS argsByNameList CLOSEDROUND
   47        | term STARTPARAMS argsByPositionList COMMA argsByNameList CLOSEDROUND
   48        | term STARTPARAMS argsByPositionList argsByNameList CLOSEDROUND
   49        | term STARTPARAMS CLOSEDROUND

   50 argsByPositionList: sequence
   51                   | argsByPositionList COMMA sequence

   52 argsByNameList: argByName
   53               | argsByNameList COMMA argByName
   54               | argsByNameList argByName

   55 argByName: NAMEDPARAM sequence

   56 list: listEnd
   57     | simpleList
   58     | simpleList listEnd

   59 listEnd: assignment
   60        | whileloop
   61        | forloop
   62        | ifThenElse
   63        | fundef

   64 simpleList: exp
   65           | simpleList exp

   66 assignment: assign
   67           | OUTLET ASSIGN list
   68           | DIROUTLET ASSIGN list

   69 assign: var ASSIGN list
   70       | INIT LOCALVAR ASSIGN list
   71       | var lvalueStepList ASSIGN list
   72       | var APLUS list
   73       | var lvalueStepList APLUS list
   74       | var AMINUS list
   75       | var lvalueStepList AMINUS list
   76       | var ATIMES list
   77       | var lvalueStepList ATIMES list
   78       | var APOWOP list
   79       | var lvalueStepList APOWOP list
   80       | var ADIV list
   81       | var lvalueStepList ADIV list
   82       | var ADIVDIV list
   83       | var lvalueStepList ADIVDIV list
   84       | var AREM list
   85       | var lvalueStepList AREM list
   86       | var ABITAND list
   87       | var lvalueStepList ABITAND list
   88       | var ABITXOR list
   89       | var lvalueStepList ABITXOR list
   90       | var ABITOR list
   91       | var lvalueStepList ABITOR list
   92       | var ALSHIFT list
   93       | var lvalueStepList ALSHIFT list
   94       | var ARSHIFT list
   95       | var lvalueStepList ARSHIFT list
   96       | var ALOGAND list
   97       | var lvalueStepList ALOGAND list
   98       | var ALOGANDEXT list
   99       | var lvalueStepList ALOGANDEXT list
  100       | var ALOGXOR list
  101       | var lvalueStepList ALOGXOR list
  102       | var ALOGOR list
  103       | var lvalueStepList ALOGOR list
  104       | var ALOGOREXT list
  105       | var lvalueStepList ALOGOREXT list
  106       | var ANTHOP list
  107       | var lvalueStepList ANTHOP list
  108       | var ACONCAT list
  109       | var lvalueStepList ACONCAT list
  110       | var ARCONCAT list
  111       | var lvalueStepList ARCONCAT list
  112       | localVar AAPPLY funcall
  113       | patcherVar AAPPLY funcall
  114       | globalVar AAPPLY funcall
  115       | var lvalueStepList AAPPLY funcall

  116 lvalueStepList: NTHOP lvalueStepParams
  117               | APPLY lvalueStepParams
  118               | lvalueStepList NTHOP lvalueStepParams
  119               | lvalueStepList APPLY lvalueStepParams

  120 lvalueStepParams: exp
  121                 | lvalueStepParams exp

  122 exp: term
  123    | UPLUS listEnd
  124    | UMINUS listEnd
  125    | LOGNOT listEnd
  126    | BITNOT listEnd
  127    | exp PLUS listEnd
  128    | exp MINUS listEnd
  129    | exp TIMES listEnd
  130    | exp DIV listEnd
  131    | exp DIVDIV listEnd
  132    | exp REM listEnd
  133    | exp POWOP listEnd
  134    | exp BITAND listEnd
  135    | exp BITXOR listEnd
  136    | exp BITOR listEnd
  137    | exp LSHIFT listEnd
  138    | exp RSHIFT listEnd
  139    | exp EQUAL listEnd
  140    | exp NEQ listEnd
  141    | exp LT listEnd
  142    | exp GT listEnd
  143    | exp LEQ listEnd
  144    | exp GEQ listEnd
  145    | exp LOGOR listEnd
  146    | exp LOGAND listEnd
  147    | exp LOGXOR listEnd
  148    | exp LOGOREXT listEnd
  149    | exp LOGANDEXT listEnd
  150    | exp NTHOP listEnd
  151    | exp PICKOP listEnd
  152    | exp RANGE listEnd
  153    | exp APPLY listEnd
  154    | exp ACCESS_UNWRAP listEnd
  155    | UPLUS exp
  156    | UMINUS exp
  157    | LOGNOT exp
  158    | BITNOT exp
  159    | exp PLUS exp
  160    | exp MINUS exp
  161    | exp TIMES exp
  162    | exp DIV exp
  163    | exp DIVDIV exp
  164    | exp REM exp
  165    | exp POWOP exp
  166    | exp BITAND exp
  167    | exp BITXOR exp
  168    | exp BITOR exp
  169    | exp LSHIFT exp
  170    | exp RSHIFT exp
  171    | exp EQUAL exp
  172    | exp NEQ exp
  173    | exp LT exp
  174    | exp GT exp
  175    | exp LEQ exp
  176    | exp GEQ exp
  177    | exp LOGOR exp
  178    | exp LOGAND exp
  179    | exp LOGXOR exp
  180    | exp LOGOREXT exp
  181    | exp LOGANDEXT exp
  182    | exp NTHOP exp
  183    | exp PICKOP exp
  184    | exp RANGE exp
  185    | exp APPLY exp
  186    | exp ACCESS_UNWRAP exp
  187    | term lvalueStepList ASSIGN list
  188    | term lvalueStepList APLUS list
  189    | term lvalueStepList AMINUS list
  190    | term lvalueStepList ATIMES list
  191    | term lvalueStepList APOWOP list
  192    | term lvalueStepList ADIV list
  193    | term lvalueStepList ADIVDIV list
  194    | term lvalueStepList AREM list
  195    | term lvalueStepList ABITAND list
  196    | term lvalueStepList ABITXOR list
  197    | term lvalueStepList ABITOR list
  198    | term lvalueStepList ALSHIFT list
  199    | term lvalueStepList ARSHIFT list
  200    | term lvalueStepList ALOGAND list
  201    | term lvalueStepList ALOGANDEXT list
  202    | term lvalueStepList ALOGXOR list
  203    | term lvalueStepList ALOGOR list
  204    | term lvalueStepList ALOGOREXT list
  205    | term lvalueStepList ANTHOP list
  206    | term lvalueStepList ACONCAT list
  207    | term lvalueStepList ARCONCAT list
  208    | term lvalueStepList AAPPLY funcall

  209 term: LONG_LITERAL
  210     | RAT_LITERAL
  211     | DOUBLE_LITERAL
  212     | PITCH_LITERAL
  213     | SYMBOL_LITERAL
  214     | BACHNULL
  215     | ARGCOUNT
  216     | BACHNIL
  217     | INLET
  218     | INTINLET
  219     | RATINLET
  220     | FLOATINLET
  221     | PITCHINLET
  222     | DIRINLET
  223     | OPEN sequence CLOSEDROUND
  224     | OPEN CLOSEDROUND
  225     | PUSH sequence POP
  226     | PUSH POP
  227     | BIF
  228     | OF
  229     | var
  230     | functionApplication

  231 var: globalVar
  232    | localVar
  233    | patcherVar

  234 globalVar: GLOBALVAR

  235 patcherVar: PATCHERVAR

  236 localVar: LOCALVAR
  237         | KEEP LOCALVAR
  238         | UNKEEP LOCALVAR


Terminals, with rules where they appear

$end (0) 0
error (256)
LONG_LITERAL (258) 209
INLET (259) 217
INTINLET (260) 218
RATINLET (261) 219
FLOATINLET (262) 220
PITCHINLET (263) 221
OUTLET (264) 67
DIRINLET (265) 222
DIROUTLET (266) 68
RAT_LITERAL (267) 210
DOUBLE_LITERAL (268) 211
PITCH_LITERAL (269) 212
SYMBOL_LITERAL (270) 213
GLOBALVAR (271) 234
PATCHERVAR (272) 235
LOCALVAR (273) 23 24 33 36 37 40 41 42 70 236 237 238
NAMEDPARAM (274) 2 4 55
BIF (275) 227
OF (276) 228
SEQ (277) 6
IF_KW (278) 7 8
THEN_KW (279) 7 8
ELSE_KW (280) 8
WHILE_KW (281) 9 10
DO_KW (282) 9 11 12 13 14 15
FOR_KW (283) 11 12 13 14 15 16 17 18 19 20
IN_KW (284) 23 24
COLLECT_KW (285) 10 16 17 18 19 20
ASSIGN (286) 36 40 67 68 69 70 71 187
PLUS (287) 127 159
MINUS (288) 128 160
TIMES (289) 129 161
DIV (290) 130 162
DIVDIV (291) 131 163
APLUS (292) 72 73 188
LOGOR (293) 145 177
LOGAND (294) 146 178
LOGOREXT (295) 148 180
LOGANDEXT (296) 149 181
EQUAL (297) 139 171
LT (298) 141 173
GT (299) 142 174
LEQ (300) 143 175
GEQ (301) 144 176
NEQ (302) 140 172
OPEN (303) 223 224
CLOSEDROUND (304) 45 46 47 48 49 223 224
FUNDEF (305) 26 28 30 32
PUSH (306) 225 226
POP (307) 225 226
STARTPARAMS (308) 45 46 47 48 49
COMMA (309) 22 37 38 40 42 47 51 53
ELLIPSIS (310) 34 38
BACHNULL (311) 214
BACHNIL (312) 216
ARGCOUNT (313) 215
EOL (314)
UNRECOGNIZED (315)
LIFT (316) 41
AMINUS (317) 74 75 189
ATIMES (318) 76 77 190
APOWOP (319) 78 79 191
ADIV (320) 80 81 192
ADIVDIV (321) 82 83 193
AREM (322) 84 85 194
ABITAND (323) 86 87 195
ABITXOR (324) 88 89 196
ABITOR (325) 90 91 197
ALSHIFT (326) 92 93 198
ARSHIFT (327) 94 95 199
ALOGAND (328) 96 97 200
ALOGANDEXT (329) 98 99 201
ALOGXOR (330) 100 101 202
ALOGOR (331) 102 103 203
ALOGOREXT (332) 104 105 204
ANTHOP (333) 106 107 205
AAPPLY (334) 112 113 114 115 208
ACONCAT (335) 108 109 206
ARCONCAT (336) 110 111 207
CONCAT (337)
LOGXOR (338) 147 179
BITOR (339) 136 168
BITXOR (340) 135 167
BITAND (341) 134 166
RANGE (342) 152 184
LSHIFT (343) 137 169
RSHIFT (344) 138 170
REM (345) 132 164
NTHOP (346) 116 118 150 182
PICKOP (347) 151 183
APPLY (348) 44 117 119 153 185
ACCESS_UNWRAP (349) 154 186
LVALUESTEPPARAMS (350)
AS_KW (351) 13 14 15 18 19 20
WITH_KW (352) 12 14 15 17 19 20
UPLUS (353) 123 155
LOGNOT (354) 125 157
BITNOT (355) 126 158
UMINUS (356) 124 156
POWOP (357) 133 165
KEEP (358) 237
UNKEEP (359) 238
INIT (360) 70


Nonterminals, with rules where they appear

$accept (106)
    on left: 0
program (107)
    on left: 1 2 3 4, on right: 0
sequence (108)
    on left: 5 6, on right: 3 4 6 7 8 9 10 13 14 15 18 19 20 23 24
    50 51 55 223 225
ifThenElse (109)
    on left: 7 8, on right: 62
whileloop (110)
    on left: 9 10, on right: 60
forloop (111)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 61
forargList (112)
    on left: 21 22, on right: 11 12 13 14 15 16 17 18 19 20 22
forarg (113)
    on left: 23 24, on right: 21 22
fundef (114)
    on left: 26 28 30 32, on right: 63
$@1 (115)
    on left: 25, on right: 26
$@2 (116)
    on left: 27, on right: 28
$@3 (117)
    on left: 29, on right: 30
$@4 (118)
    on left: 31, on right: 32
funargList (119)
    on left: 33 34 36 37 38 40, on right: 26 30 37 38 40
$@5 (120)
    on left: 35, on right: 36
$@6 (121)
    on left: 39, on right: 40
liftedargList (122)
    on left: 41 42, on right: 30 32 42
functionApplication (123)
    on left: 43 44, on right: 230
funcall (124)
    on left: 45 46 47 48 49, on right: 43 44 112 113 114 115 208
argsByPositionList (125)
    on left: 50 51, on right: 45 47 48 51
argsByNameList (126)
    on left: 52 53 54, on right: 12 14 15 17 19 20 46 47 48 53 54
argByName (127)
    on left: 55, on right: 52 53 54
list (128)
    on left: 56 57 58, on right: 5 6 7 8 9 10 11 12 13 14 15 16 17
    18 19 20 26 28 30 32 36 40 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 187 188 189 190
    191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206
    207
listEnd (129)
    on left: 59 60 61 62 63, on right: 56 58 123 124 125 126 127 128
    129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144
    145 146 147 148 149 150 151 152 153 154
simpleList (130)
    on left: 64 65, on right: 57 58 65
assignment (131)
    on left: 66 67 68, on right: 59
assign (132)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112 113 114 115, on right: 66
lvalueStepList (133)
    on left: 116 117 118 119, on right: 71 73 75 77 79 81 83 85 87
    89 91 93 95 97 99 101 103 105 107 109 111 115 118 119 187 188 189
    190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205
    206 207 208
lvalueStepParams (134)
    on left: 120 121, on right: 116 117 118 119 121
exp (135)
    on left: 122 123 124 125 126 127 128 129 130 131 132 133 134 135
    136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151
    152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
    168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183
    184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199
    200 201 202 203 204 205 206 207 208, on right: 44 64 65 120 121
    127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
    143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158
    159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174
    175 176 177 178 179 180 181 182 183 184 185 186
term (136)
    on left: 209 210 211 212 213 214 215 216 217 218 219 220 221 222
    223 224 225 226 227 228 229 230, on right: 45 46 47 48 49 122 187
    188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203
    204 205 206 207 208
var (137)
    on left: 231 232 233, on right: 69 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 106 107 108 109 110 111 115 229
globalVar (138)
    on left: 234, on right: 114 231
patcherVar (139)
    on left: 235, on right: 113 233
localVar (140)
    on left: 236 237 238, on right: 112 232


State 0

    0 $accept: . program $end

    LONG_LITERAL    shift, and go to state 1
    INLET           shift, and go to state 2
    INTINLET        shift, and go to state 3
    RATINLET        shift, and go to state 4
    FLOATINLET      shift, and go to state 5
    PITCHINLET      shift, and go to state 6
    OUTLET          shift, and go to state 7
    DIRINLET        shift, and go to state 8
    DIROUTLET       shift, and go to state 9
    RAT_LITERAL     shift, and go to state 10
    DOUBLE_LITERAL  shift, and go to state 11
    PITCH_LITERAL   shift, and go to state 12
    SYMBOL_LITERAL  shift, and go to state 13
    GLOBALVAR       shift, and go to state 14
    PATCHERVAR      shift, and go to state 15
    LOCALVAR        shift, and go to state 16
    NAMEDPARAM      shift, and go to state 17
    BIF             shift, and go to state 18
    OF              shift, and go to state 19
    IF_KW           shift, and go to state 20
    WHILE_KW        shift, and go to state 21
    FOR_KW          shift, and go to state 22
    OPEN            shift, and go to state 23
    FUNDEF          shift, and go to state 24
    PUSH            shift, and go to state 25
    ELLIPSIS        shift, and go to state 26
    BACHNULL        shift, and go to state 27
    BACHNIL         shift, and go to state 28
    ARGCOUNT        shift, and go to state 29
    LIFT            shift, and go to state 30
    UPLUS           shift, and go to state 31
    LOGNOT          shift, and go to state 32
    BITNOT          shift, and go to state 33
    UMINUS          shift, and go to state 34
    KEEP            shift, and go to state 35
    UNKEEP          shift, and go to state 36
    INIT            shift, and go to state 37

    $default  reduce using rule 1 (program)

    program              go to state 38
    sequence             go to state 39
    ifThenElse           go to state 40
    whileloop            go to state 41
    forloop              go to state 42
    fundef               go to state 43
    funargList           go to state 44
    liftedargList        go to state 45
    functionApplication  go to state 46
    funcall              go to state 47
    list                 go to state 48
    listEnd              go to state 49
    simpleList           go to state 50
    assignment           go to state 51
    assign               go to state 52
    exp                  go to state 53
    term                 go to state 54
    var                  go to state 55
    globalVar            go to state 56
    patcherVar           go to state 57
    localVar             go to state 58


State 1

  209 term: LONG_LITERAL .

    $default  reduce using rule 209 (term)


State 2

  217 term: INLET .

    $default  reduce using rule 217 (term)


State 3

  218 term: INTINLET .

    $default  reduce using rule 218 (term)


State 4

  219 term: RATINLET .

    $default  reduce using rule 219 (term)


State 5

  220 term: FLOATINLET .

    $default  reduce using rule 220 (term)


State 6

  221 term: PITCHINLET .

    $default  reduce using rule 221 (term)


State 7

   67 assignment: OUTLET . ASSIGN list

    ASSIGN  shift, and go to state 59


State 8

  222 term: DIRINLET .

    $default  reduce using rule 222 (term)


State 9

   68 assignment: DIROUTLET . ASSIGN list

    ASSIGN  shift, and go to state 60


State 10

  210 term: RAT_LITERAL .

    $default  reduce using rule 210 (term)


State 11

  211 term: DOUBLE_LITERAL .

    $default  reduce using rule 211 (term)


State 12

  212 term: PITCH_LITERAL .

    $default  reduce using rule 212 (term)


State 13

  213 term: SYMBOL_LITERAL .

    $default  reduce using rule 213 (term)


State 14

  234 globalVar: GLOBALVAR .

    $default  reduce using rule 234 (globalVar)


State 15

  235 patcherVar: PATCHERVAR .

    $default  reduce using rule 235 (patcherVar)


State 16

   33 funargList: LOCALVAR .
   36           | LOCALVAR . ASSIGN $@5 list
  236 localVar: LOCALVAR .

    ASSIGN  shift, and go to state 61

    ASSIGN    [reduce using rule 236 (localVar)]
    FUNDEF    reduce using rule 33 (funargList)
    FUNDEF    [reduce using rule 236 (localVar)]
    COMMA     reduce using rule 33 (funargList)
    COMMA     [reduce using rule 236 (localVar)]
    LIFT      reduce using rule 33 (funargList)
    LIFT      [reduce using rule 236 (localVar)]
    $default  reduce using rule 236 (localVar)


State 17

    2 program: NAMEDPARAM .

    $default  reduce using rule 2 (program)


State 18

  227 term: BIF .

    $default  reduce using rule 227 (term)


State 19

  228 term: OF .

    $default  reduce using rule 228 (term)


State 20

    7 ifThenElse: IF_KW . sequence THEN_KW list
    8           | IF_KW . sequence THEN_KW list ELSE_KW list

    LONG_LITERAL    shift, and go to state 1
    INLET           shift, and go to state 2
    INTINLET        shift, and go to state 3
    RATINLET        shift, and go to state 4
    FLOATINLET      shift, and go to state 5
    PITCHINLET      shift, and go to state 6
    OUTLET          shift, and go to state 7
    DIRINLET        shift, and go to state 8
    DIROUTLET       shift, and go to state 9
    RAT_LITERAL     shift, and go to state 10
    DOUBLE_LITERAL  shift, and go to state 11
    PITCH_LITERAL   shift, and go to state 12
    SYMBOL_LITERAL  shift, and go to state 13
    GLOBALVAR       shift, and go to state 14
    PATCHERVAR      shift, and go to state 15
    LOCALVAR        shift, and go to state 16
    BIF             shift, and go to state 18
    OF              shift, and go to state 19
    IF_KW           shift, and go to state 20
    WHILE_KW        shift, and go to state 21
    FOR_KW          shift, and go to state 22
    OPEN            shift, and go to state 23
    FUNDEF          shift, and go to state 24
    PUSH            shift, and go to state 25
    ELLIPSIS        shift, and go to state 26
    BACHNULL        shift, and go to state 27
    BACHNIL         shift, and go to state 28
    ARGCOUNT        shift, and go to state 29
    LIFT            shift, and go to state 30
    UPLUS           shift, and go to state 31
    LOGNOT          shift, and go to state 32
    BITNOT          shift, and go to state 33
    UMINUS          shift, and go to state 34
    KEEP            shift, and go to state 35
    UNKEEP          shift, and go to state 36
    INIT            shift, and go to state 37

    sequence             go to state 62
    ifThenElse           go to state 40
    whileloop            go to state 41
    forloop              go to state 42
    fundef               go to state 43
    funargList           go to state 44
    liftedargList        go to state 45
    functionApplication  go to state 46
    funcall              go to state 47
    list                 go to state 48
    listEnd              go to state 49
    simpleList           go to state 50
    assignment           go to state 51
    assign               go to state 52
    exp                  go to state 53
    term                 go to state 54
    var                  go to state 55
    globalVar            go to state 56
    patcherVar           go to state 57
    localVar             go to state 58


State 21

    9 whileloop: WHILE_KW . sequence DO_KW list
   10          | WHILE_KW . sequence COLLECT_KW list

    LONG_LITERAL    shift, and go to state 1
    INLET           shift, and go to state 2
    INTINLET        shift, and go to state 3
    RATINLET        shift, and go to state 4
    FLOATINLET      shift, and go to state 5
    PITCHINLET      shift, and go to state 6
    OUTLET          shift, and go to state 7
    DIRINLET        shift, and go to state 8
    DIROUTLET       shift, and go to state 9
    RAT_LITERAL     shift, and go to state 10
    DOUBLE_LITERAL  shift, and go to state 11
    PITCH_LITERAL   shift, and go to state 12
    SYMBOL_LITERAL  shift, and go to state 13
    GLOBALVAR       shift, and go to state 14
    PATCHERVAR      shift, and go to state 15
    LOCALVAR        shift, and go to state 16
    BIF             shift, and go to state 18
    OF              shift, and go to state 19
    IF_KW           shift, and go to state 20
    WHILE_KW        shift, and go to state 21
    FOR_KW          shift, and go to state 22
    OPEN            shift, and go to state 23
    FUNDEF          shift, and go to state 24
    PUSH            shift, and go to state 25
    ELLIPSIS        shift, and go to state 26
    BACHNULL        shift, and go to state 27
    BACHNIL         shift, and go to state 28
    ARGCOUNT        shift, and go to state 29
    LIFT            shift, and go to state 30
    UPLUS           shift, and go to state 31
    LOGNOT          shift, and go to state 32
    BITNOT          shift, and go to state 33
    UMINUS          shift, and go to state 34
    KEEP            shift, and go to state 35
    UNKEEP          shift, and go to state 36
    INIT            shift, and go to state 37

    sequence             go to state 63
    ifThenElse           go to state 40
    whileloop            go to state 41
    forloop              go to state 42
    fundef               go to state 43
    funargList           go to state 44
    liftedargList        go to state 45
    functionApplication  go to state 46
    funcall              go to state 47
    list                 go to state 48
    listEnd              go to state 49
    simpleList           go to state 50
    assignment           go to state 51
    assign               go to state 52
    exp                  go to state 53
    term                 go to state 54
    var                  go to state 55
    globalVar            go to state 56
    patcherVar           go to state 57
    localVar             go to state 58


State 22

   11 forloop: FOR_KW . forargList DO_KW list
   12        | FOR_KW . forargList WITH_KW argsByNameList DO_KW list
   13        | FOR_KW . forargList AS_KW sequence DO_KW list
   14        | FOR_KW . forargList AS_KW sequence WITH_KW argsByNameList DO_KW list
   15        | FOR_KW . forargList WITH_KW argsByNameList AS_KW sequence DO_KW list
   16        | FOR_KW . forargList COLLECT_KW list
   17        | FOR_KW . forargList WITH_KW argsByNameList COLLECT_KW list
   18        | FOR_KW . forargList AS_KW sequence COLLECT_KW list
   19        | FOR_KW . forargList AS_KW sequence WITH_KW argsByNameList COLLECT_KW list
   20        | FOR_KW . forargList WITH_KW argsByNameList AS_KW sequence COLLECT_KW list

    LOCALVAR  shift, and go to state 64

    forargList  go to state 65
    forarg      go to state 66


State 23

  223 term: OPEN . sequence CLOSEDROUND
  224     | OPEN . CLOSEDROUND

    LONG_LITERAL    shift, and go to state 1
    INLET           shift, and go to state 2
    INTINLET        shift, and go to state 3
    RATINLET        shift, and go to state 4
    FLOATINLET      shift, and go to state 5
    PITCHINLET      shift, and go to state 6
    OUTLET          shift, and go to state 7
    DIRINLET        shift, and go to state 8
    DIROUTLET       shift, and go to state 9
    RAT_LITERAL     shift, and go to state 10
    DOUBLE_LITERAL  shift, and go to state 11
    PITCH_LITERAL   shift, and go to state 12
    SYMBOL_LITERAL  shift, and go to state 13
    GLOBALVAR       shift, and go to state 14
    PATCHERVAR      shift, and go to state 15
    LOCALVAR        shift, and go to state 16
    BIF             shift, and go to state 18
    OF              shift, and go to state 19
    IF_KW           shift, and go to state 20
    WHILE_KW        shift, and go to state 21
    FOR_KW          shift, and go to state 22
    OPEN            shift, and go to state 23
    CLOSEDROUND     shift, and go to state 67
    FUNDEF          shift, and go to state 24
    PUSH            shift, and go to state 25
    ELLIPSIS        shift, and go to state 26
    BACHNULL        shift, and go to state 27
    BACHNIL         shift, and go to state 28
    ARGCOUNT        shift, and go to state 29
    LIFT            shift, and go to state 30
    UPLUS           shift, and go to state 31
    LOGNOT          shift, and go to state 32
    BITNOT          shift, and go to state 33
    UMINUS          shift, and go to state 34
    KEEP            shift, and go to state 35
    UNKEEP          shift, and go to state 36
    INIT            shift, and go to state 37

    sequence             go to state 68
    ifThenElse           go to state 40
    whileloop            go to state 41
    forloop              go to state 42
    fundef               go to state 43
    funargList           go to state 44
    liftedargList        go to state 45
    functionApplication  go to state 46
    funcall              go to state 47
    list                 go to state 48
    listEnd              go to state 49
    simpleList           go to state 50
    assignment           go to state 51
    assign               go to state 52
    exp                  go to state 53
    term                 go to state 54
    var                  go to state 55
    globalVar            go to state 56
    patcherVar           go to state 57
    localVar             go to state 58


State 24

   28 fundef: FUNDEF . $@2 list

    $default  reduce using rule 27 ($@2)

    $@2  go to state 69


State 25

  225 term: PUSH . sequence POP
  226     | PUSH . POP

    LONG_LITERAL    shift, and go to state 1
    INLET           shift, and go to state 2
    INTINLET        shift, and go to state 3
    RATINLET        shift, and go to state 4
    FLOATINLET      shift, and go to state 5
    PITCHINLET      shift, and go to state 6
    OUTLET          shift, and go to state 7
    DIRINLET        shift, and go to state 8
    DIROUTLET       shift, and go to state 9
    RAT_LITERAL     shift, and go to state 10
    DOUBLE_LITERAL  shift, and go to state 11
    PITCH_LITERAL   shift, and go to state 12
    SYMBOL_LITERAL  shift, and go to state 13
    GLOBALVAR       shift, and go to state 14
    PATCHERVAR      shift, and go to state 15
    LOCALVAR        shift, and go to state 16
    BIF             shift, and go to state 18
    OF              shift, and go to state 19
    IF_KW           shift, and go to state 20
    WHILE_KW        shift, and go to state 21
    FOR_KW          shift, and go to state 22
    OPEN            shift, and go to state 23
    FUNDEF          shift, and go to state 24
    PUSH            shift, and go to state 25
    POP             shift, and go to state 70
    ELLIPSIS        shift, and go to state 26
    BACHNULL        shift, and go to state 27
    BACHNIL         shift, and go to state 28
    ARGCOUNT        shift, and go to state 29
    LIFT            shift, and go to state 30
    UPLUS           shift, and go to state 31
    LOGNOT          shift, and go to state 32
    BITNOT          shift, and go to state 33
    UMINUS          shift, and go to state 34
    KEEP            shift, and go to state 35
    UNKEEP          shift, and go to state 36
    INIT            shift, and go to state 37

    sequence             go to state 71
    ifThenElse           go to state 40
    whileloop            go to state 41
    forloop              go to state 42
    fundef               go to state 43
    funargList           go to state 44
    liftedargList        go to state 45
    functionApplication  go to state 46
    funcall              go to state 47
    list                 go to state 48
    listEnd              go to state 49
    simpleList           go to state 50
    assignment           go to state 51
    assign               go to state 52
    exp                  go to state 53
    term                 go to state 54
    var                  go to state 55
    globalVar            go to state 56
    patcherVar           go to state 57
    localVar             go to state 58


State 26

   34 funargList: ELLIPSIS .

    $default  reduce using rule 34 (funargList)


State 27

  214 term: BACHNULL .

    $default  reduce using rule 214 (term)


State 28

  216 term: BACHNIL .

    $default  reduce using rule 216 (term)


State 29

  215 term: ARGCOUNT .

    $default  reduce using rule 215 (term)


State 30

   41 liftedargList: LIFT . LOCALVAR

    LOCALVAR  shift, and go to state 72


State 31

  123 exp: UPLUS . listEnd
  155    | UPLUS . exp

    LONG_LITERAL    shift, and go to state 1
    INLET           shift, and go to state 2
    INTINLET        shift, and go to state 3
    RATINLET        shift, and go to state 4
    FLOATINLET      shift, and go to state 5
    PITCHINLET      shift, and go to state 6
    OUTLET          shift, and go to state 7
    DIRINLET        shift, and go to state 8
    DIROUTLET       shift, and go to state 9
    RAT_LITERAL     shift, and go to state 10
    DOUBLE_LITERAL  shift, and go to state 11
    PITCH_LITERAL   shift, and go to state 12
    SYMBOL_LITERAL  shift, and go to state 13
    GLOBALVAR       shift, and go to state 14
    PATCHERVAR      shift, and go to state 15
    LOCALVAR        shift, and go to state 16
    BIF             shift, and go to state 18
    OF              shift, and go to state 19
    IF_KW           shift, and go to state 20
    WHILE_KW        shift, and go to state 21
    FOR_KW          shift, and go to state 22
    OPEN            shift, and go to state 23
    FUNDEF          shift, and go to state 24
    PUSH            shift, and go to state 25
    ELLIPSIS        shift, and go to state 26
    BACHNULL        shift, and go to state 27
    BACHNIL         shift, and go to state 28
    ARGCOUNT        shift, and go to state 29
    LIFT            shift, and go to state 30
    UPLUS           shift, and go to state 31
    LOGNOT          shift, and go to state 32
    BITNOT          shift, and go to state 33
    UMINUS          shift, and go to state 34
    KEEP            shift, and go to state 35
    UNKEEP          shift, and go to state 36
    INIT            shift, and go to state 37

    ifThenElse           go to state 40
    whileloop            go to state 41
    forloop              go to state 42
    fundef               go to state 43
    funargList           go to state 44
    liftedargList        go to state 45
    functionApplication  go to state 46
    funcall              go to state 47
    listEnd              go to state 73
    assignment           go to state 51
    assign               go to state 52
    exp                  go to state 74
    term                 go to state 54
    var                  go to state 55
    globalVar            go to state 56
    patcherVar           go to state 57
    localVar             go to state 58


State 32

  125 exp: LOGNOT . listEnd
  157    | LOGNOT . exp
